# TimeTracker42

./: .gitignore  README.md  package-lock.json  wrangler.jsonc
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  wrangler.jsonc
backend/alembic/: env.py
backend/alembic/versions/: 1eaa9ef5b7c1_add_days_per_week_to_goals.py  4ed5e1310708_init_schema.py  a41f03f4a6d2_add_auth_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: attendance.py  auth.py  dashboard.py  deadlines.py  goals.py  sync.py
backend/app/core/: __init__.py  config.py  rate_limit.py  security.py
backend/app/jobs/: hourly_sync.py
backend/app/models/: __init__.py  attendance_daily.py  deadline.py  goal.py  mobile_auth_code.py  oauth_token.py  refresh_token.py  sync_run.py  user.py
backend/app/repositories/: attendance_repository.py
backend/app/schemas/: attendance.py  auth.py  dashboard.py  deadlines.py  goals.py  sync.py
backend/app/services/: auth_service.py  fortytwo_client.py  goal_service.py  kpi_service.py  live_attendance_service.py  metrics.py  sync_service.py
backend/src/: index.ts  user_store.ts
backend/tests/: conftest.py  test_app_docs_config.py  test_attendance_api.py  test_auth_api.py  test_config_security.py  test_cors.py  test_dashboard_api.py  test_deadlines_api.py  test_goals_api.py  test_live_attendance.py  test_metrics.py  test_rate_limit_api.py  test_sync_api.py
docs/: api-contract.md  architecture.md  runbook.md
ios/: README.md
supabase/: config.toml
web/: README.md  (+7 more)
(+73 files in other folders)
